# FederatedLearning_OC

./: .gitignore  download_dataset.py  test.py
FL/FedAVG/: .gitignore  README.md
FL/FedAVG/SANET/fedavg-sanet/: pyproject.toml  shanghaitech_train_debug.csv
FL/FedAVG/SANET/fedavg-sanet/fedavg_sanet/: DatasetLoader.py  Task_SANET.py  client_app.py  server_app.py  task.py
FL/FedAVG/SANET_1/fedavg-sanet/: README.md  SANET.py  prepare_dataset.py  pyproject.toml  run_gpu1.ps1  run_gpu1.sh  shanghaitech_train.csv  shanghaitech_train_debug.csv  test_gpu.py
FL/FedAVG/SANET_1/fedavg-sanet/fedavg_sanet/: __init__.py  client_app.py  server_app.py
FL/FedAVG/objectcounting/: __init__.py  experiments.py  server_app.py  utils.py
FL/FedAVG/server_logs/: experiment_C0.01_E1_B10_noniid_20251102_130125.txt  experiment_C0.1_E1_B10_noniid_20251102_145355.txt  experiment_C0.1_E1_Binf_noniid_20251102_144949.txt  experiment_C0.2_E1_B10_iid_20251102_190319.txt  experiment_C0.2_E1_B10_noniid_20251102_190815.txt  experiment_C0.2_E1_Binf_iid_20251102_154623.txt  experiment_C0.2_E1_Binf_noniid_20251102_161837.txt  experiment_C0.5_E1_B10_iid_20251102_190901.txt
objectcounting/: README.md  final_model.pt  pyproject.toml
objectcounting/objectcounting/: Task_2NN.py  client_app.py  server_app.py  task.py
objectcounting/server_logs/: experiment_C0.01_E1_B10_iid_20251101_215343.txt  experiment_C0.01_E1_Binf_iid_20251101_215207.txt  experiment_C0.01_E1_Binf_noniid_20251102_103022.txt  experiment_C0.01_E1_Binf_noniid_20251102_103150.txt  experiment_C0.1_E1_B10_iid_20251102_144658.txt  experiment_C0.1_E1_Binf_iid_20251101_221504.txt  experiment_C0.5_E1_B10_noniid_20251102_193958.txt  experiment_C1.0_E1_B10_iid_20251102_194015.txt  experiment_C1.0_E1_B10_iid_20251102_200438.txt
