# =====================================================================
# MNIST 2NN Federated Learning Experiments
# Replicating FedAvg paper (McMahan et al., 2017)
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "objectcounting"
version = "1.0.0"
description = "Federated Learning with MNIST 2NN - FedAvg experiments"
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.22.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.5.0",
    "torchvision==0.20.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "cuong"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "objectcounting.server_app:app"
clientapp = "objectcounting.client_app:app"

# Custom config values accessible via `context.run_config`
# Default configuration for MNIST 2NN experiments (Table 1 from paper)
[tool.flwr.app.config]
num-server-rounds = 100       # Max rounds (will vary by experiment)
fraction-train = 1.0          # C=1.0 (100% of clients per round)
local-epochs = 1              # E=1 for 2NN model
lr = 0.01                     # Learning rate
iid = true                    # IID data partitioning (set false for Non-IID)
batch-size = 10               # B=10 (set to -1 or 0 for full batch B=∞)

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

# Local simulation federation with 100 virtual SuperNodes (as in paper)
[tool.flwr.federations.local-simulation]
options.num-supernodes = 100  # 100 clients as specified in FedAvg paper

# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
address = "<SUPERLINK-ADDRESS>:<PORT>"
insecure = true  # Remove this line to enable TLS
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup