# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedavg-sanet"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.22.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch>=2.5.0",          
    "torchvision>=0.20.0",    
    "opencv-python>=4.8.0",
    "scipy>=1.10.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "cuong"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "fedavg_sanet.server_app:app"
clientapp = "fedavg_sanet.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
# Server config
num-server-rounds = 20
fraction-train = 1.0
fraction-evaluate = 1.0
min-train-clients = 2
min-evaluate-clients = 2
min-available-clients = 2

# Training config
local-epochs = 1
lr = 0.0001
batch_size = 8
amp = true  # Enable AMP for GPU acceleration
grad_clip = 0.0

# Loss function parameters
alpha = 0.001         # SSIM loss weight (1e-3 theo paper)
beta = 0.001          # Count loss weight
ssim_window = 11
ssim_sigma = 1.5

# Data config
sigma = 4             # Gaussian kernel sigma for density map
target_size = { height = 384, width = 512 }  # Image size (H, W)
csv_path = "shanghaitech_train_debug.csv"
partitioner_type = "iid"  # "iid" hoặc "dirichlet"
dirichlet_alpha = 0.5
num_workers = 0
pin_memory = true  # Enable pin_memory for GPU

# Model config (channels for SANet: c1, c2, c3, c4)
sa-channels = { c1 = 64, c2 = 128, c3 = 256, c4 = 512 }

# Default federation to use when running the app
[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 1 # Each ClientApp will get assigned 1 CPU core
options.backend.client-resources.num-gpus = 0.5 # Each ClientApp will get 50% of each available GPU
options.backend.init_args.num_cpus = 1 # Only expose 1 CPU to the simulation
options.backend.init_args.num_gpus = 1 # Expose a single GPU to the simulation


# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
address = "<SUPERLINK-ADDRESS>:<PORT>"
insecure = true  # Remove this line to enable TLS
# root-certificates = "<PATH/TO/ca.crt>"  # For TLS setup