# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedavg-sanet"
version = "1.0.0"
description = "Federated SANet for Crowd Counting (ECCV 2018)"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.22.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch>=2.5.0",          
    "torchvision>=0.20.0",    
    "opencv-python>=4.8.0",
    "scipy>=1.10.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "cuong"

[tool.flwr.app.components]
serverapp = "fedavg_sanet.server_app:app"
clientapp = "fedavg_sanet.client_app:app"

# 🔥🔥🔥 MAX PERFORMANCE: 16 CPU cores + A100 40GB GPU 🔥🔥🔥
[tool.flwr.app.config]
num-server-rounds = 100
fraction-train = 1.0                 # ✅ Train ALL clients per round
fraction-evaluate = 1.0              # ✅ Evaluate ALL clients
local-epochs = 30                     # ✅ More epochs per round (faster convergence)
lr = 0.00001                         # ✅ Higher LR for faster training
batch-size = 1                      # ✅ LARGE batch for A100 (test memory first!)
csv-path = "shanghaitech_train.csv"
sigma = 4
partitioner-type = "iid"
dirichlet-alpha = 0.5
amp = true                           # ✅ Mixed precision (A100 Tensor Cores)
grad-clip = 1.0                      # ✅ Gradient clipping for stability
alpha = 0.001
beta = 0.001
num-workers = 2                      # ✅ 2 workers per client (parallel data loading)
pin-memory = true                    # ✅ Faster CPU→GPU transfer

[tool.flwr.federations]
default = "local-simulation"

# ✅ MAX CPU + GPU utilization
[tool.flwr.federations.local-simulation]
options.num-supernodes = 5           # ✅ 5 clients (fit trong 16 cores)
options.backend.client-resources.num-cpus = 3      # ✅ 1 main + 2 workers
options.backend.client-resources.num-gpus = 0.2    # ✅ 20% GPU per client

[tool.flwr.federations.local-simulation.options.backend.init-args]
num_cpus = 15       # ✅ 5 clients × 3 CPUs = 15 cores (để 1 core cho OS)
num_gpus = 1        # ✅ 5 clients × 0.2 = 100% A100 GPU
ignore_reinit_error = true
include_dashboard = false

[tool.flwr.federations.remote-federation]
address = "<SUPERLINK-ADDRESS>:<PORT>"
insecure = true