# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fedavg-sanet"
version = "1.0.0"
description = "Federated SANet for Crowd Counting (ECCV 2018)"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.22.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch>=2.5.0",          
    "torchvision>=0.20.0",    
    "opencv-python>=4.8.0",
    "scipy>=1.10.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "cuong"

[tool.flwr.app.components]
serverapp = "fedavg_sanet.server_app:app"
clientapp = "fedavg_sanet.client_app:app"

# 🔥 Optimized: 10 cores + A100 GPU với 2 workers/client
[tool.flwr.app.config]
num-server-rounds = 100
fraction-train = 0.5                 # ✅ Train 50% clients/round (5 clients)
fraction-evaluate = 1.0              
local-epochs = 30                     
lr = 0.00001
batch-size = 1                       # ✅ A100 có thể handle batch lớn
csv-path = "shanghaitech_train.csv"
sigma = 4
partitioner-type = "iid"
dirichlet-alpha = 0.5
amp = true                           
grad-clip = 1.0                      
alpha = 0.001
beta = 0.001
num-workers = 2                      # ✅ 2 worker threads/client
pin-memory = true                    

[tool.flwr.federations]
default = "local-simulation"

# ✅ Config: 10 cores cho 5 clients parallel (mỗi client 2 workers)
[tool.flwr.federations.local-simulation]
options.num-supernodes = 10          # 10 clients total
options.backend.client-resources.num-cpus = 2      # ✅ 2 cores/client (main + 2 workers cần ~2 cores)
options.backend.client-resources.num-gpus = 0.2    # ✅ 20% GPU/client

[tool.flwr.federations.local-simulation.options.backend.init-args]
num_cpus = 10       # ✅ 10 cores total (5 active clients × 2 cores)
num_gpus = 1        # ✅ Single A100 GPU
ignore_reinit_error = true
include_dashboard = false

[tool.flwr.federations.remote-federation]
address = "<SUPERLINK-ADDRESS>:<PORT>"
insecure = true